frontend/test/should_pass/array_accumulation_extraction_graph_element_type.grg
#using "array_model_002.gm"
#using "array_model_003.gm"

rule r
{
	a:A; b:A; c:A; n:N;
	if{ array<A>[a,b,c].extract<intValue>().sum() > n.nArray.extract<val>().sum(); }
	
	modify {
	---
		eval {
			def var avg:double = array<A>[a,b,c].extract<intValue>().avg();
			def var med:double = n.nArray.extract<val>().medUnsorted();
		}
	}
}
