frontend/test/should_fail/iterated_query_nested_access_rhs.grg
rule foo()
{	
	iterated it {
		.;
	---
		def var bar:double = 1;
		
		modify {
		---
			def var score:double;
			eval {
				yield score = [?it].extract<bar>().sum(); // no acces from nested part (including self) allowed
			}
		}
	}
	
	modify {
	}
}
